maile change gareko xu

--- a/file/index.html
+++ b/file/index.html
@@ -25,7 +25,7 @@
     <P style="font-size: large;">  (a-b) <sup>2</sup> = a <sup>2</sup> - 2ab + b <sup>2</sup>
     </P>
    <!-- image insert -->
-   <p style="font-size: large;">case 1 image insert </p>
+   <p style="font-size: large;">case 1 image insert </p> 
 </div>
 
    <br><br>
@@ -50,6 +50,9 @@
 <p class="para">
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia amet dolor dolores ex doloremque perferendis sint molestias, vel nam iusto inventore optio, quas, hic animi ea itaque veritatis numquam? Neque odit temporibus ratione necessitatibus inventore, harum assumenda? Soluta possimus magni maxime sapiente odio sed praesentium eveniet error eos, adipisci ducimus saepe quisquam ea quae commodi quidem dignissimos porro voluptatibus repellendus voluptate corporis placeat ex impedit! Placeat cupiditate, alias sequi recusandae voluptates quam ab tempora, impedit quod, aperiam id vero. A qui unde quas porro alias hic distinctio, ut quod voluptates illum magnam voluptate accusantium deserunt ratione blanditiis vel, facere suscipit?
 </p>
+
+
+<h1>something change</h1>
 
 
 
